--- a/css/_menu-button.scss
+++ b/css/_menu-button.scss
@@ -1,11 +1,12 @@
-$color: #000;
+$color: rgba(0,0,0,0.7);
 $background: $light;
 
 #menuToggle
 {
-    position: fixed;
-    top:20px;
-    left:20px;
+    position: absolute;
+    top:0;
+    right:0;
+    transition: 0.4s;
 
     z-index: 9999;
 
@@ -15,7 +16,7 @@ $background: $light;
     @include media-breakpoint-up(lg){
         position: relative;
         top:auto;
-        left:auto;
+        right:auto;
     }
 }
 
@@ -46,8 +47,8 @@ $background: $light;
 #menuToggle span
 {
     display: block;
-    width: 33px;
-    height: 4px;
+    width: 30px;
+    height: 3px;
     margin-bottom: 5px;
     position: relative;
 
@@ -172,7 +173,7 @@ $background: $light;
         width:auto;
         height:auto;
         left:auto;
-        top:auto;
+        top:-6px;
         transform:none;
         background:none;
         flex-direction: row;
