--- a/css/main.css
+++ b/css/main.css
@@ -8215,9 +8215,10 @@ h3 {
 }
 
 #menuToggle {
-  position: fixed;
-  top: 20px;
-  left: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: 0.4s;
   z-index: 9999;
   -webkit-user-select: none;
   user-select: none;
@@ -8226,7 +8227,7 @@ h3 {
   #menuToggle {
     position: relative;
     top: auto;
-    left: auto;
+    right: auto;
   }
 }
 
@@ -8255,11 +8256,11 @@ h3 {
  */
 #menuToggle span {
   display: block;
-  width: 33px;
-  height: 4px;
+  width: 30px;
+  height: 3px;
   margin-bottom: 5px;
   position: relative;
-  background: #000;
+  background: rgba(0, 0, 0, 0.7);
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -8365,7 +8366,7 @@ h3 {
     width: auto;
     height: auto;
     left: auto;
-    top: auto;
+    top: -6px;
     transform: none;
     background: none;
     flex-direction: row;
@@ -8423,15 +8424,9 @@ li {
 header {
   background: #fff;
   padding: 30px 20px;
-  padding-bottom: 40px;
-  text-align: center;
-}
-@media (min-width: 992px) {
-  header {
-    position: relative;
-    box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.15);
-    z-index: 9999;
-  }
+  position: relative;
+  box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.15);
+  z-index: 9999;
 }
 @media (min-width: 992px) {
   header .container {
@@ -8518,30 +8513,44 @@ img {
   z-index: 10001 !important;
 }
 
+body #header {
+  height: 150px;
+  transition: 0.4s;
+}
+body #header img {
+  transition: 0.4s;
+}
+body.scrolled #header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 60px;
+  padding: 10px 20px;
+}
 @media (min-width: 992px) {
-  body #header {
-    height: 177px;
-    transition: 0.4s;
-  }
-  body #header img {
-    transition: 0.4s;
-  }
   body.scrolled #header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    height: auto;
-    padding: 10px 20px;
-  }
-  body.scrolled #header img {
-    width: 150px;
-  }
-  body.scrolled main {
-    margin-top: 177px;
+    height: 70px;
   }
 }
+body.scrolled #header img {
+  height: 40px;
+  width: auto;
+}
+@media (min-width: 992px) {
+  body.scrolled #header img {
+    height: auto;
+    width: 150px;
+  }
+}
+body.scrolled #menuToggle {
+  top: 10px;
+}
+body.scrolled main {
+  margin-top: 60px;
+}
+
 a {
   position: relative;
 }
